fix: use mutate package state machine

--- a/packages/visual-editing/package.json
+++ b/packages/visual-editing/package.json
@@ -157,11 +157,12 @@
     "root": true
   },
   "dependencies": {
-    "@sanity/mutate": "^0.10.0",
+    "@sanity/mutate": "^0.10.1-canary.1",
     "@sanity/preview-url-secret": "workspace:^",
     "@vercel/stega": "0.1.2",
     "scroll-into-view-if-needed": "^3.1.0",
     "valibot": "0.31.1",
+    "xstate": "^5.18.1",
     "zustand": "^4.5.5"
   },
   "devDependencies": {
