--- a/packages/visual-editing/package.json
+++ b/packages/visual-editing/package.json
@@ -162,8 +162,7 @@
     "@vercel/stega": "0.1.2",
     "scroll-into-view-if-needed": "^3.1.0",
     "valibot": "0.31.1",
-    "xstate": "^5.18.1",
-    "zustand": "^4.5.5"
+    "xstate": "^5.18.1"
   },
   "devDependencies": {
     "@remix-run/react": "^2.12.0",
