--- a/apps/live-next/package.json
+++ b/apps/live-next/package.json
@@ -21,31 +21,31 @@
     "@sanity/icons": "^3.4.0",
     "@sanity/image-url": "^1.0.2",
     "@sanity/presentation": "workspace:*",
-    "@sanity/preview-url-secret": "^1.6.20",
-    "@sanity/vision": "^3.57.2",
+    "@sanity/preview-url-secret": "workspace:*",
+    "@sanity/vision": "^3.57.3",
     "@sanity/visual-editing": "workspace:*",
     "@tailwindcss/typography": "^0.5.15",
     "@types/node": "^20.14.13",
-    "@types/react": "^18.3.5",
+    "@types/react": "^18.3.7",
     "@types/react-dom": "^18.3.0",
     "@vercel/speed-insights": "^1.0.12",
     "autoprefixer": "^10.4.20",
     "date-fns": "^3.6.0",
     "next": "15.0.0-canary.157",
     "next-sanity": "^9.4.7",
-    "postcss": "^8.4.45",
+    "postcss": "^8.4.47",
     "react": "19.0.0-rc-f2df5694-20240916",
     "react-dom": "19.0.0-rc-f2df5694-20240916",
-    "sanity": "^3.57.2",
+    "sanity": "^3.57.3",
     "sanity-plugin-asset-source-unsplash": "^3.0.1",
     "server-only": "^0.0.1",
     "styled-components": "^6.1.12",
-    "tailwindcss": "^3.4.10",
+    "tailwindcss": "^3.4.11",
     "typescript": "5.6.2"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "15.0.0-canary.157",
-    "eslint": "^8.57.0",
+    "eslint": "^8.57.1",
     "eslint-config-next": "15.0.0-canary.157"
   }
 }
