--- a/packages/core-loader/package.json
+++ b/packages/core-loader/package.json
@@ -73,16 +73,16 @@
     "@repo/prettier-config": "workspace:*",
     "@repo/visual-editing-helpers": "workspace:*",
     "@sanity/client": "^6.21.3",
-    "@sanity/comlink": "^0.0.1",
+    "@sanity/comlink": "workspace:^",
     "@sanity/pkg-utils": "6.11.1",
     "@typescript-eslint/eslint-plugin": "^7.18.0",
     "@typescript-eslint/parser": "^7.18.0",
     "async-cache-dedupe": "2.2.0",
-    "eslint": "^8.57.0",
-    "happy-dom": "^15.7.3",
+    "eslint": "^8.57.1",
+    "happy-dom": "^15.7.4",
     "nanostores": "0.10.3",
     "typescript": "5.6.2",
-    "vitest": "^2.0.5"
+    "vitest": "^2.1.1"
   },
   "peerDependencies": {
     "@sanity/client": "^6.21.3"
