--- a/packages/presentation/package.json
+++ b/packages/presentation/package.json
@@ -47,7 +47,7 @@
     "root": true
   },
   "dependencies": {
-    "@sanity/comlink": "^0.0.1",
+    "@sanity/comlink": "workspace:^",
     "@sanity/icons": "^3.4.0",
     "@sanity/preview-url-secret": "workspace:^",
     "@sanity/ui": "^2.8.9",
@@ -59,7 +59,7 @@
     "lodash.isequal": "^4.5.0",
     "mendoza": "3.0.7",
     "mnemonist": "0.39.8",
-    "path-to-regexp": "^6.2.2",
+    "path-to-regexp": "^6.3.0",
     "rxjs": "^7.8.1",
     "suspend-react": "0.1.3"
   },
@@ -71,14 +71,14 @@
     "@sanity/client": "^6.21.3",
     "@sanity/pkg-utils": "6.11.1",
     "@types/lodash.get": "^4.4.9",
-    "eslint": "^8.57.0",
-    "happy-dom": "^15.7.3",
+    "eslint": "^8.57.1",
+    "happy-dom": "^15.7.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "sanity": "^3.57.3",
     "styled-components": "6.1.13",
     "typescript": "5.6.2",
-    "vitest": "^2.0.5"
+    "vitest": "^2.1.1"
   },
   "peerDependencies": {
     "@sanity/client": "^6.21.3"
