--- a/packages/preview-kit-compat/package.json
+++ b/packages/preview-kit-compat/package.json
@@ -52,13 +52,13 @@
     "@repo/prettier-config": "workspace:*",
     "@repo/visual-editing-helpers": "workspace:*",
     "@sanity/client": "^6.21.3",
-    "@sanity/comlink": "^0.0.1",
+    "@sanity/comlink": "workspace:^",
     "@sanity/pkg-utils": "6.11.1",
-    "@types/react": "^18.3.5",
-    "eslint": "^8.57.0",
+    "@types/react": "^18.3.7",
+    "eslint": "^8.57.1",
     "react": "^18.3.1",
     "typescript": "5.6.2",
-    "vitest": "^2.0.5"
+    "vitest": "^2.1.1"
   },
   "peerDependencies": {
     "@sanity/client": "^6.21.3",
