--- a/packages/visual-editing-helpers/package.json
+++ b/packages/visual-editing-helpers/package.json
@@ -65,15 +65,15 @@
     "@repo/package.config": "workspace:*",
     "@repo/prettier-config": "workspace:*",
     "@sanity/client": "^6.21.3",
-    "@sanity/comlink": "^0.0.1",
+    "@sanity/comlink": "workspace:^",
     "@sanity/util": "^3.57.3",
-    "@types/react": "^18.3.5",
-    "eslint": "^8.57.0",
+    "@types/react": "^18.3.7",
+    "eslint": "^8.57.1",
     "react": "^18.3.1",
     "sanity": "^3.57.3",
     "typescript": "5.6.2",
     "valibot": "0.31.1",
-    "vitest": "^2.0.5"
+    "vitest": "^2.1.1"
   },
   "peerDependencies": {
     "@sanity/client": "^6.21.3",
