--- a/packages/visual-editing/package.json
+++ b/packages/visual-editing/package.json
@@ -122,38 +122,38 @@
     "@repo/visual-editing-helpers": "workspace:*",
     "@sanity/client": "^6.21.3",
     "@sanity/color": "^3.0.6",
-    "@sanity/comlink": "^0.0.1",
+    "@sanity/comlink": "workspace:^",
     "@sanity/demo": "^2.0.0",
     "@sanity/pkg-utils": "6.11.1",
     "@sanity/ui": "2.8.9",
-    "@storybook/addon-essentials": "^8.2.9",
-    "@storybook/addon-interactions": "^8.2.9",
-    "@storybook/addon-links": "^8.2.9",
-    "@storybook/addon-themes": "^8.2.9",
-    "@storybook/react": "^8.2.9",
-    "@storybook/react-vite": "^8.2.9",
-    "@storybook/test": "^8.2.9",
+    "@storybook/addon-essentials": "^8.3.1",
+    "@storybook/addon-interactions": "^8.3.1",
+    "@storybook/addon-links": "^8.3.1",
+    "@storybook/addon-themes": "^8.3.1",
+    "@storybook/react": "^8.3.1",
+    "@storybook/react-vite": "^8.3.1",
+    "@storybook/test": "^8.3.1",
     "@sveltejs/adapter-auto": "^3.2.4",
-    "@sveltejs/kit": "^2.5.26",
-    "@sveltejs/package": "^2.3.4",
+    "@sveltejs/kit": "^2.5.27",
+    "@sveltejs/package": "^2.3.5",
     "@tailwindcss/typography": "^0.5.15",
-    "@types/react": "^18.3.5",
+    "@types/react": "^18.3.7",
     "@types/react-dom": "^18.3.0",
-    "eslint": "^8.57.0",
+    "eslint": "^8.57.1",
     "eslint-plugin-storybook": "^0.8.0",
-    "happy-dom": "^15.7.3",
+    "happy-dom": "^15.7.4",
     "ls-engines": "^0.9.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-is": "^18.3.1",
     "rimraf": "^5.0.5",
-    "storybook": "^8.2.9",
+    "storybook": "^8.3.1",
     "styled-components": "6.1.13",
     "svelte": "^4.2.19",
-    "tailwindcss": "^3.4.10",
+    "tailwindcss": "^3.4.11",
     "typescript": "5.6.2",
     "uuid": "10.0.0",
-    "vitest": "^2.0.5"
+    "vitest": "^2.1.1"
   },
   "peerDependencies": {
     "@remix-run/react": ">= 2",
