--- a/apps/live-next/package.json
+++ b/apps/live-next/package.json
@@ -17,7 +17,7 @@
   },
   "dependencies": {
     "@sanity/assist": "^3.0.6",
-    "@sanity/color-input": "4.0.0-canary.0",
+    "@sanity/color-input": "^4.0.1",
     "@sanity/icons": "^3.4.0",
     "@sanity/image-url": "^1.0.2",
     "@sanity/presentation": "workspace:*",
@@ -39,7 +39,7 @@
     "sanity": "^3.57.3",
     "sanity-plugin-asset-source-unsplash": "^3.0.1",
     "server-only": "^0.0.1",
-    "styled-components": "^6.1.12",
+    "styled-components": "^6.1.13",
     "tailwindcss": "^3.4.11",
     "typescript": "5.6.2"
   },
