--- a/apps/astro/package.json
+++ b/apps/astro/package.json
@@ -16,6 +16,7 @@
     "@astrojs/tailwind": "^5.1.0",
     "@astrojs/vercel": "^7.8.1",
     "@repo/env": "workspace:*",
+    "@repo/studio-url": "workspace:*",
     "@sanity/astro": "^3.1.6",
     "@sanity/client": "^6.21.3",
     "@sanity/image-url": "^1.0.2",
@@ -26,7 +27,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "sanity": "3.57.3",
-    "tailwindcss": "^3.4.11",
+    "tailwindcss": "^3.4.12",
     "typescript": "5.6.2"
   }
 }
