--- a/apps/next/package.json
+++ b/apps/next/package.json
@@ -9,10 +9,11 @@
     "start": "next start"
   },
   "dependencies": {
-    "@next/bundle-analyzer": "14.2.9",
+    "@next/bundle-analyzer": "14.2.11",
     "@portabletext/react": "^3.1.0",
     "@repo/channels": "workspace:*",
     "@repo/env": "workspace:*",
+    "@repo/studio-url": "workspace:*",
     "@sanity/client": "^6.21.3",
     "@sanity/image-url": "^1.0.2",
     "@sanity/preview-kit-compat": "workspace:*",
@@ -28,14 +29,14 @@
     "autoprefixer": "10.4.20",
     "eslint": "^8.57.1",
     "eslint-config-next": "14.2.11",
-    "next": "14.2.9",
+    "next": "14.2.11",
     "next-sanity": "9.4.7",
     "postcss": "8.4.47",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "styled-components": "6.1.13",
     "suspend-react": "0.1.3",
-    "tailwindcss": "^3.4.11",
+    "tailwindcss": "^3.4.12",
     "typescript": "5.6.2"
   }
 }
