--- a/apps/nuxt/package.json
+++ b/apps/nuxt/package.json
@@ -13,6 +13,7 @@
     "@nuxtjs/tailwindcss": "^6.12.1",
     "@repo/channels": "workspace:*",
     "@repo/env": "workspace:*",
+    "@repo/studio-url": "workspace:*",
     "@sanity/client": "^6.21.3",
     "@sanity/presentation": "workspace:*",
     "@sanity/preview-url-secret": "workspace:*",
