--- a/apps/page-builder-demo/package.json
+++ b/apps/page-builder-demo/package.json
@@ -12,6 +12,7 @@
     "@next/bundle-analyzer": "14.2.11",
     "@portabletext/react": "^3.1.0",
     "@repo/env": "workspace:*",
+    "@repo/studio-url": "workspace:*",
     "@sanity/demo": "^2.0.0",
     "@sanity/image-url": "^1.0.2",
     "@sanity/react-loader": "workspace:*",
@@ -34,7 +35,7 @@
     "react-dom": "^18.3.1",
     "styled-components": "6.1.13",
     "suspend-react": "0.1.3",
-    "tailwindcss": "^3.4.11",
+    "tailwindcss": "^3.4.12",
     "typescript": "5.6.2"
   }
 }
