--- a/packages/@repo/studio-url/turbo.json
+++ b/packages/@repo/studio-url/turbo.json
@@ -3,10 +3,8 @@
   "extends": ["//"],
   "tasks": {
     "build": {
-      "env": ["NODE_ENV"]
-    },
-    "dev": {
-      "persistent": false
+      "env": ["NODE_ENV", "VERCEL_ENV", "VERCEL_BRANCH_URL", "VERCEL_URL"],
+      "outputs": ["dist/**"]
     }
   }
 }
