--- a/packages/@repo/studio-url/turbo.json
+++ b/packages/@repo/studio-url/turbo.json
@@ -3,7 +3,7 @@
   "extends": ["//"],
   "tasks": {
     "build": {
-      "env": ["NODE_ENV", "VERCEL_ENV", "VERCEL_BRANCH_URL", "VERCEL_URL"],
+      "env": ["NODE_ENV", "VERCEL_ENV", "VERCEL_BRANCH_URL"],
       "outputs": ["dist/**"]
     }
   }
