chore: add `@sanity/next-loader`

--- a/apps/live-next/package.json
+++ b/apps/live-next/package.json
@@ -7,22 +7,18 @@
     "build": "next build",
     "debug": "NEXT_PRIVATE_DEBUG_CACHE=1 next build --profile && NEXT_PRIVATE_DEBUG_CACHE=1 next start",
     "predev": "npm run typegen",
-    "dev": "next",
+    "dev": "next dev -p 3009",
     "lint": "next lint",
-    "presetup": "echo 'about to setup env variables, follow the guide here: https://github.com/vercel/next.js/tree/canary/examples/cms-sanity#using-the-sanity-cli'",
-    "setup": "npx sanity@latest init --env .env.local",
-    "postsetup": "echo 'create the read token by following the rest of the guide: https://github.com/vercel/next.js/tree/canary/examples/cms-sanity#creating-a-read-token'",
     "start": "next start",
-    "typegen": "sanity schema extract && sanity typegen generate"
+    "typegen": "sanity typegen generate"
   },
   "dependencies": {
-    "@sanity/assist": "^3.0.6",
-    "@sanity/color-input": "^4.0.1",
-    "@sanity/icons": "^3.4.0",
+    "@repo/env": "workspace:*",
+    "@repo/sanity-extracted-schema": "workspace:*",
+    "@repo/studio-url": "workspace:*",
     "@sanity/image-url": "^1.0.2",
-    "@sanity/presentation": "workspace:*",
+    "@sanity/next-loader": "workspace:*",
     "@sanity/preview-url-secret": "workspace:*",
-    "@sanity/vision": "^3.57.3",
     "@sanity/visual-editing": "workspace:*",
     "@tailwindcss/typography": "^0.5.15",
     "@types/node": "^20.14.13",
@@ -36,10 +32,7 @@
     "postcss": "^8.4.47",
     "react": "19.0.0-rc-fb9a90fa48-20240614",
     "react-dom": "19.0.0-rc-fb9a90fa48-20240614",
-    "sanity": "^3.57.3",
-    "sanity-plugin-asset-source-unsplash": "^3.0.1",
     "server-only": "^0.0.1",
-    "styled-components": "^6.1.13",
     "tailwindcss": "^3.4.12",
     "typescript": "5.6.2"
   },
