--- a/packages/@repo/sanity-extracted-schema/package.json
+++ b/packages/@repo/sanity-extracted-schema/package.json
@@ -5,11 +5,12 @@
   "description": "The extracted schema from @repo/sanity-schema used for TypeGen",
   "exports": {
     "./cross-dataset-references.json": "./cross-dataset-references.json",
+    "./live-demo.json": "./live-demo.json",
     "./page-builder-demo.json": "./page-builder-demo.json",
     "./shoes.json": "./shoes.json"
   },
   "scripts": {
-    "build": "sanity schema extract --workspace cross-dataset-references --path ./cross-dataset-references.json && sanity schema extract --workspace page-builder-demo --path ./page-builder-demo.json && sanity schema extract --workspace shoes --path ./shoes.json",
+    "build": "sanity schema extract --workspace cross-dataset-references --path ./cross-dataset-references.json && sanity schema extract --workspace live-demo --path ./live-demo.json && sanity schema extract --workspace page-builder-demo --path ./page-builder-demo.json && sanity schema extract --workspace shoes --path ./shoes.json",
     "lint": "eslint --cache ."
   },
   "browserslist": "extends @sanity/browserslist-config",
