--- a/packages/@repo/sanity-schema/package.json
+++ b/packages/@repo/sanity-schema/package.json
@@ -19,14 +19,17 @@
     "root": true
   },
   "dependencies": {
-    "@repo/env": "workspace:*"
+    "@repo/env": "workspace:*",
+    "date-fns": "^3.6.0"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
     "@repo/prettier-config": "workspace:*",
     "@sanity/assist": "3.0.6",
     "@sanity/color-input": "4.0.1",
+    "@sanity/icons": "3.4.0",
     "@sanity/presentation": "workspace:*",
+    "@sanity/ui": "2.8.9",
     "eslint": "^8.57.1",
     "rxjs": "^7.8.1",
     "sanity": "3.57.3",
@@ -36,7 +39,9 @@
   "peerDependencies": {
     "@sanity/assist": "$@sanity/assist",
     "@sanity/color-input": "$@sanity/color-input",
+    "@sanity/icons": "$@sanity/icons",
     "@sanity/presentation": "$@sanity/presentation",
+    "@sanity/ui": "$@sanity/ui",
     "rxjs": "$rxjs",
     "sanity": "$sanity",
     "sanity-plugin-asset-source-unsplash": "$sanity-plugin-asset-source-unsplash"
