--- a/release-please-config.json
+++ b/release-please-config.json
@@ -6,8 +6,10 @@
     "packages/channels": {
       "bump-minor-pre-major": true
     },
+    "packages/comlink": {},
     "packages/core-loader": {},
     "packages/insert-menu": {},
+    "packages/next-loader": {},
     "packages/presentation": {},
     "packages/preview-kit-compat": {},
     "packages/preview-url-secret": {},
