--- a/release-please-config.json
+++ b/release-please-config.json
@@ -2,6 +2,7 @@
   "$schema": "https://raw.githubusercontent.com/googleapis/release-please/main/schemas/config.json",
   "plugins": ["node-workspace"],
   "packages": {
+    "packages/comlink": {},
     "packages/channels": {
       "bump-minor-pre-major": true
     },
