--- a/packages/preview-url-secret/package.json
+++ b/packages/preview-url-secret/package.json
@@ -21,6 +21,12 @@
       "require": "./dist/index.cjs",
       "default": "./dist/index.js"
     },
+    "./constants": {
+      "source": "./src/_exports/constants.ts",
+      "import": "./dist/constants.js",
+      "require": "./dist/constants.cjs",
+      "default": "./dist/constants.js"
+    },
     "./create-secret": {
       "source": "./src/_exports/create-secret.ts",
       "import": "./dist/create-secret.js",
@@ -58,6 +64,9 @@
   "types": "./dist/index.d.ts",
   "typesVersions": {
     "*": {
+      "constants": [
+        "./dist/constants.d.ts"
+      ],
       "create-secret": [
         "./dist/create-secret.d.ts"
       ],
