chore: use exact versions

--- a/packages/next-loader/package.json
+++ b/packages/next-loader/package.json
@@ -69,7 +69,7 @@
     "root": true
   },
   "dependencies": {
-    "@sanity/comlink": "workspace:^"
+    "@sanity/comlink": "workspace:*"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
