--- a/packages/presentation/package.json
+++ b/packages/presentation/package.json
@@ -47,9 +47,9 @@
     "root": true
   },
   "dependencies": {
-    "@sanity/comlink": "workspace:^",
+    "@sanity/comlink": "workspace:*",
     "@sanity/icons": "^3.4.0",
-    "@sanity/preview-url-secret": "workspace:^",
+    "@sanity/preview-url-secret": "workspace:*",
     "@sanity/ui": "^2.8.9",
     "@sanity/uuid": "3.0.2",
     "@types/lodash.isequal": "^4.5.8",
