--- a/packages/visual-editing-helpers/package.json
+++ b/packages/visual-editing-helpers/package.json
@@ -65,7 +65,7 @@
     "@repo/package.config": "workspace:*",
     "@repo/prettier-config": "workspace:*",
     "@sanity/client": "^6.21.3",
-    "@sanity/comlink": "workspace:^",
+    "@sanity/comlink": "workspace:*",
     "@sanity/util": "^3.57.4",
     "@types/react": "^18.3.7",
     "eslint": "^8.57.1",
