--- a/packages/core-loader/package.json
+++ b/packages/core-loader/package.json
@@ -73,7 +73,7 @@
     "@repo/prettier-config": "workspace:*",
     "@repo/visual-editing-helpers": "workspace:*",
     "@sanity/client": "^6.21.3",
-    "@sanity/comlink": "workspace:^",
+    "@sanity/comlink": "workspace:*",
     "@sanity/pkg-utils": "6.11.2",
     "@typescript-eslint/eslint-plugin": "^7.18.0",
     "@typescript-eslint/parser": "^7.18.0",
