--- a/packages/preview-kit-compat/package.json
+++ b/packages/preview-kit-compat/package.json
@@ -52,7 +52,7 @@
     "@repo/prettier-config": "workspace:*",
     "@repo/visual-editing-helpers": "workspace:*",
     "@sanity/client": "^6.21.3",
-    "@sanity/comlink": "workspace:^",
+    "@sanity/comlink": "workspace:*",
     "@sanity/pkg-utils": "6.11.2",
     "@types/react": "^18.3.7",
     "eslint": "^8.57.1",
