--- a/packages/svelte-loader/package.json
+++ b/packages/svelte-loader/package.json
@@ -58,7 +58,7 @@
     "@repo/visual-editing-helpers": "workspace:*",
     "@sanity/client": "^6.21.3",
     "@sanity/pkg-utils": "6.11.2",
-    "@sanity/preview-url-secret": "workspace:^",
+    "@sanity/preview-url-secret": "workspace:*",
     "@sanity/visual-editing": "workspace:*",
     "@sveltejs/kit": "^2.5.28",
     "@sveltejs/vite-plugin-svelte": "^3.1.2",
