--- a/packages/visual-editing/package.json
+++ b/packages/visual-editing/package.json
@@ -109,7 +109,7 @@
   },
   "dependencies": {
     "@sanity/mutate": "^0.10.1-canary.3",
-    "@sanity/preview-url-secret": "workspace:^",
+    "@sanity/preview-url-secret": "workspace:*",
     "@vercel/stega": "0.1.2",
     "scroll-into-view-if-needed": "^3.1.0",
     "valibot": "0.31.1",
@@ -122,7 +122,7 @@
     "@repo/visual-editing-helpers": "workspace:*",
     "@sanity/client": "^6.21.3",
     "@sanity/color": "^3.0.6",
-    "@sanity/comlink": "workspace:^",
+    "@sanity/comlink": "workspace:*",
     "@sanity/demo": "^2.0.0",
     "@sanity/pkg-utils": "6.11.2",
     "@sanity/ui": "2.8.9",
