--- a/packages/next-loader/package.json
+++ b/packages/next-loader/package.json
@@ -75,6 +75,7 @@
     "@repo/eslint-config": "workspace:*",
     "@repo/package.config": "workspace:*",
     "@repo/prettier-config": "workspace:*",
+    "@repo/visual-editing-helpers": "workspace:*",
     "@sanity/client": "^6.21.3",
     "@sanity/pkg-utils": "6.11.2",
     "@types/react": "^18.3.7",
