chore: support perspective switcher

--- a/packages/next-loader/package.json
+++ b/packages/next-loader/package.json
@@ -69,7 +69,8 @@
     "root": true
   },
   "dependencies": {
-    "@sanity/comlink": "workspace:*"
+    "@sanity/comlink": "workspace:*",
+    "use-effect-event": "^1.0.2"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
