chore: support validating preview secret with server action

--- a/packages/next-loader/package.json
+++ b/packages/next-loader/package.json
@@ -70,6 +70,7 @@
   },
   "dependencies": {
     "@sanity/comlink": "workspace:*",
+    "@sanity/preview-url-secret": "workspace:*",
     "use-effect-event": "^1.0.2"
   },
   "devDependencies": {
