--- a/packages/presentation/package.json
+++ b/packages/presentation/package.json
@@ -61,7 +61,8 @@
     "mnemonist": "0.39.8",
     "path-to-regexp": "^6.3.0",
     "rxjs": "^7.8.1",
-    "suspend-react": "0.1.3"
+    "suspend-react": "0.1.3",
+    "use-effect-event": "^1.0.2"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
