--- a/apps/live-next/.eslintrc
+++ b/apps/live-next/.eslintrc
@@ -1,4 +1,8 @@
 {
   "extends": "next/core-web-vitals",
-  "root": true
+  "root": true,
+  "plugins": ["react-compiler"],
+  "rules": {
+    "react-compiler/react-compiler": "error"
+  }
 }
