--- a/apps/live-next/package.json
+++ b/apps/live-next/package.json
@@ -26,7 +26,9 @@
     "@types/react-dom": "^18.3.0",
     "@vercel/speed-insights": "^1.0.12",
     "autoprefixer": "^10.4.20",
+    "babel-plugin-react-compiler": "0.0.0-experimental-24ec0eb-20240918",
     "date-fns": "^3.6.0",
+    "framer-motion": "12.0.0-alpha.1",
     "next": "15.0.0-canary.158",
     "next-sanity": "^9.4.7",
     "postcss": "^8.4.47",
@@ -39,6 +41,7 @@
   "devDependencies": {
     "@next/bundle-analyzer": "15.0.0-canary.158",
     "eslint": "^8.57.1",
-    "eslint-config-next": "15.0.0-canary.158"
+    "eslint-config-next": "15.0.0-canary.158",
+    "eslint-plugin-react-compiler": "0.0.0-experimental-7670337-20240918"
   }
 }
