--- a/packages/next-loader/tsconfig.base.json
+++ b/packages/next-loader/tsconfig.base.json
@@ -3,6 +3,7 @@
   "compilerOptions": {
     "paths": {
       "@sanity/next-loader/client-components/live": ["./src/client-components/live/index.ts"],
+      "@sanity/next-loader/hooks": ["./src/hooks/index.ts"],
       "@sanity/next-loader/server-actions": ["./src/server-actions/index.ts"],
       "@sanity/next-loader": ["./src/index"]
     },
