chore: support Live Draft Content API events

--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   },
   "prettier": "@repo/prettier-config",
   "dependencies": {
-    "@sanity/client": "^6.21.3",
+    "@sanity/client": "6.21.4-canary.0",
     "@sanity/types": "3.57.4",
     "@sanity/util": "3.57.4",
     "@sanity/vision": "3.57.4",
