--- a/apps/page-builder-demo/package.json
+++ b/apps/page-builder-demo/package.json
@@ -3,37 +3,39 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
+    "prebuild": "npm run typegen",
     "build": "next build",
+    "predev": "npm run typegen",
     "dev": "next dev -p 3005",
     "lint": "next lint",
-    "start": "next start"
+    "start": "next start",
+    "typegen": "sanity typegen generate"
   },
   "dependencies": {
     "@next/bundle-analyzer": "14.2.13",
-    "@portabletext/react": "^3.1.0",
     "@repo/env": "workspace:*",
+    "@repo/sanity-extracted-schema": "workspace:*",
     "@repo/studio-url": "workspace:*",
+    "@sanity/cli": "^3.57.4",
     "@sanity/demo": "^2.0.0",
     "@sanity/image-url": "^1.0.2",
-    "@sanity/react-loader": "workspace:*",
+    "@sanity/next-loader": "workspace:*",
     "@sanity/visual-editing": "workspace:*",
     "@tailwindcss/typography": "^0.5.15",
     "@types/node": "20.8.7",
     "@types/react": "^18.3.8",
     "@types/react-dom": "^18.3.0",
-    "@vercel/stega": "0.1.2",
     "autoprefixer": "10.4.20",
     "clsx": "^2.1.1",
     "eslint": "^8.57.1",
     "eslint-config-next": "14.2.13",
-    "groq": "^3.57.4",
     "next": "14.2.11",
-    "next-sanity": "9.5.0",
+    "next-sanity": "9.5.1-canary.13",
     "postcss": "8.4.47",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "server-only": "^0.0.1",
     "styled-components": "6.1.13",
-    "suspend-react": "0.1.3",
     "tailwindcss": "^3.4.12",
     "typescript": "5.6.2"
   }
