--- a/packages/next-loader/package.json
+++ b/packages/next-loader/package.json
@@ -96,7 +96,7 @@
     "@repo/package.config": "workspace:*",
     "@repo/prettier-config": "workspace:*",
     "@repo/visual-editing-helpers": "workspace:*",
-    "@sanity/client": "6.21.4-canary.0",
+    "@sanity/client": "^6.22.0",
     "@sanity/pkg-utils": "6.11.2",
     "@types/react": "^18.3.8",
     "eslint": "^8.57.1",
@@ -106,7 +106,7 @@
     "vitest": "^2.1.1"
   },
   "peerDependencies": {
-    "@sanity/client": "6.21.4-canary.0",
+    "@sanity/client": "^6.22.0",
     "next": "^14.1 || ^15.0.0-0",
     "react": "^18.3 || ^19.0.0-0"
   },
