chore: fix typegen

--- a/packages/@repo/sanity-extracted-schema/turbo.json
+++ b/packages/@repo/sanity-extracted-schema/turbo.json
@@ -3,7 +3,12 @@
   "extends": ["//"],
   "tasks": {
     "build": {
-      "outputs": ["cross-dataset-references.json", "page-builder-demo.json", "shoes.json"]
+      "outputs": [
+        "cross-dataset-references.json",
+        "live-demo.json",
+        "page-builder-demo.json",
+        "shoes.json"
+      ]
     }
   }
 }
