--- a/packages/next-loader/package.json
+++ b/packages/next-loader/package.json
@@ -100,6 +100,7 @@
     "@sanity/pkg-utils": "6.11.2",
     "@types/react": "^18.3.8",
     "eslint": "^8.57.1",
+    "fast-deep-equal": "3.1.3",
     "next": "^14.2.13",
     "react": "^18.3.1",
     "typescript": "5.6.2",
