--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "overrides": {
       "@sanity/comlink": "workspace:*",
       "@sanity/core-loader": "workspace:*",
+      "@sanity/next-loader": "workspace:*",
       "@sanity/presentation": "workspace:*",
       "@sanity/preview-kit-compat": "workspace:*",
       "@sanity/preview-url-secret": "workspace:*",
