chore(useOptimistic): fix flash of stale content issue

--- a/packages/visual-editing/package.json
+++ b/packages/visual-editing/package.json
@@ -108,10 +108,11 @@
     "root": true
   },
   "dependencies": {
-    "@sanity/mutate": "^0.10.1-canary.3",
+    "@sanity/mutate": "^0.10.1-canary.4",
     "@sanity/preview-url-secret": "workspace:*",
     "@vercel/stega": "0.1.2",
     "scroll-into-view-if-needed": "^3.1.0",
+    "use-effect-event": "^1.0.2",
     "valibot": "0.31.1",
     "xstate": "^5.18.2"
   },
