--- a/packages/visual-editing/package.json
+++ b/packages/visual-editing/package.json
@@ -108,7 +108,7 @@
     "root": true
   },
   "dependencies": {
-    "@sanity/mutate": "^0.10.1-canary.4",
+    "@sanity/mutate": "0.10.1-canary.4",
     "@sanity/preview-url-secret": "workspace:*",
     "@vercel/stega": "0.1.2",
     "scroll-into-view-if-needed": "^3.1.0",
