--- a/apps/live-next/package.json
+++ b/apps/live-next/package.json
@@ -12,6 +12,7 @@
     "start": "next start",
     "typegen": "sanity typegen generate"
   },
+  "prettier": "@repo/prettier-config",
   "dependencies": {
     "@repo/env": "workspace:*",
     "@repo/sanity-extracted-schema": "workspace:*",
@@ -40,6 +41,7 @@
   },
   "devDependencies": {
     "@next/bundle-analyzer": "15.0.0-canary.167",
+    "@repo/prettier-config": "workspace:*",
     "eslint": "^8.57.1",
     "eslint-config-next": "15.0.0-canary.167",
     "eslint-plugin-react-compiler": "0.0.0-experimental-92aaa43-20240924"
