--- a/.github/workflows/prettier.yml
+++ b/.github/workflows/prettier.yml
@@ -2,7 +2,7 @@ name: Prettier
 
 on:
   push:
-    branches: [main]
+    branches: [main, canary]
   workflow_dispatch:
 
 concurrency:
@@ -23,7 +23,6 @@ jobs:
         with:
           cache: pnpm
           node-version: lts/*
-
       - run: pnpm install --dev --ignore-scripts
       - uses: actions/cache@v4
         with:
@@ -39,7 +38,7 @@ jobs:
       - uses: peter-evans/create-pull-request@5e914681df9dc83aa4e4905692ca88beb2f9e91f # v7
         with:
           body: I ran `pnpm format` 🧑‍💻
-          branch: actions/prettier
+          branch: "actions/prettier-${{ github.ref_name }}"
           commit-message: 'chore(prettier): 🤖 ✨'
           labels: 🤖 bot
           sign-commits: true
