--- a/apps/astro/package.json
+++ b/apps/astro/package.json
@@ -10,6 +10,7 @@
     "preview": "astro preview",
     "start": "astro dev"
   },
+  "prettier": "@repo/prettier-config",
   "dependencies": {
     "@astrojs/check": "^0.9.3",
     "@astrojs/react": "^3.6.2",
@@ -29,5 +30,8 @@
     "sanity": "3.58.0",
     "tailwindcss": "^3.4.13",
     "typescript": "5.6.2"
+  },
+  "devDependencies": {
+    "@repo/prettier-config": "workspace:*"
   }
 }
