--- a/apps/next/package.json
+++ b/apps/next/package.json
@@ -8,6 +8,7 @@
     "lint": "next lint",
     "start": "next start"
   },
+  "prettier": "@repo/prettier-config",
   "dependencies": {
     "@next/bundle-analyzer": "14.2.13",
     "@portabletext/react": "^3.1.0",
@@ -38,5 +39,8 @@
     "suspend-react": "0.1.3",
     "tailwindcss": "^3.4.13",
     "typescript": "5.6.2"
+  },
+  "devDependencies": {
+    "@repo/prettier-config": "workspace:*"
   }
 }
