--- a/apps/remix/package.json
+++ b/apps/remix/package.json
@@ -7,6 +7,7 @@
     "build": "remix vite:build",
     "dev": "remix vite:dev"
   },
+  "prettier": "@repo/prettier-config",
   "dependencies": {
     "@portabletext/react": "^3.1.0",
     "@remix-run/css-bundle": "^2.12.1",
@@ -28,6 +29,7 @@
   "devDependencies": {
     "@remix-run/dev": "^2.12.1",
     "@remix-run/eslint-config": "^2.12.1",
+    "@repo/prettier-config": "workspace:*",
     "@types/react": "^18.3.9",
     "@types/react-dom": "^18.3.0",
     "@types/source-map-support": "^0.5.10",
