--- a/apps/svelte/package.json
+++ b/apps/svelte/package.json
@@ -11,6 +11,7 @@
     "lint": "eslint --cache .",
     "preview": "vite preview"
   },
+  "prettier": "@repo/prettier-config",
   "dependencies": {
     "@portabletext/svelte": "^2.1.11",
     "@repo/env": "workspace:*",
@@ -19,6 +20,7 @@
   },
   "devDependencies": {
     "@fontsource/fira-mono": "^5.1.0",
+    "@repo/prettier-config": "workspace:*",
     "@sanity/client": "^6.22.0",
     "@sanity/presentation": "workspace:*",
     "@sanity/preview-url-secret": "workspace:*",
