chore: add new browser token to turbo json

--- a/apps/live-next/turbo.json
+++ b/apps/live-next/turbo.json
@@ -9,6 +9,7 @@
         "NEXT_PUBLIC_VERCEL_ENV",
         "SANITY_API_READ_TOKEN",
         "SANITY_API_WRITE_TOKEN",
+        "SANITY_API_BROWSER_TOKEN",
         "ANALYZE"
       ],
       "outputs": [".next/**", "!.next/cache/**"]
