chore(page-builder-demo): add draft mode enabler

--- a/apps/page-builder-demo/package.json
+++ b/apps/page-builder-demo/package.json
@@ -22,6 +22,7 @@
     "@sanity/demo": "^2.0.0",
     "@sanity/image-url": "^1.0.2",
     "@sanity/next-loader": "workspace:*",
+    "@sanity/preview-url-secret": "workspace:*",
     "@sanity/visual-editing": "workspace:*",
     "@tailwindcss/typography": "^0.5.15",
     "@types/node": "20.8.7",
