--- a/packages/svelte-loader/package.json
+++ b/packages/svelte-loader/package.json
@@ -31,9 +31,9 @@
     "CHANGELOG.md"
   ],
   "scripts": {
-    "build": "pkg build --strict --check --clean",
-    "dev": "pkg build --strict",
-    "lint": "eslint .",
+    "build": "svelte-package -i src -o dist",
+    "dev": "pnpm run build",
+    "lint": "eslint --cache .",
     "prepack": "turbo run build",
     "test": "vitest --pass-with-no-tests --typecheck"
   },
@@ -99,13 +99,9 @@
     "@sanity/pkg-utils": "6.11.1",
     "@sanity/preview-url-secret": "workspace:^",
     "@sanity/visual-editing": "workspace:*",
-    "@sveltejs/kit": "^2.5.26",
-    "@typescript-eslint/eslint-plugin": "^7.18.0",
-    "@typescript-eslint/parser": "^7.18.0",
-    "eslint": "^8.57.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.2.1",
-    "eslint-plugin-simple-import-sort": "^12.1.1",
+    "@sveltejs/kit": "^2.5.28",
+    "@sveltejs/vite-plugin-svelte": "^3.1.2",
+    "eslint": "^8.57.1",
     "rollup-plugin-svelte": "^7.2.2",
     "svelte": "^4.2.19",
     "typescript": "5.6.2",
